<resources>
    <string name="app_name" translatable="false">ICI</string>
    <string name="action_settings">Settings</string>
    <string name="mainPP_IGAAP" translatable="false">I-GAAP Form</string>
    <string name="mainPP_ELL" translatable="false">ELL</string>
    <string name="title_activity_login_screen" translatable="false">login_screen</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btn" translatable="false">Login</string>
    <string name="title_activity_igaap_form" translatable="false">IgaapForm</string>
    <string name="title_activity_igaapform" translatable="false">IGAAPForm</string>
    <string name="title_activity_registration" translatable="false">Registration</string>
    <string name="submit">Submit</string>
    <string name="sendToServer">Send To Server</string>

    <!-- ELL (Employee Registration) -->
    <string name="ell_reg">Register User</string>
    <string name="ell_userlist">View Registered Users</string>
    
    <!-- IGAAP Form -->
    <string name="agree_btn">Agree</string>
    <string name="disagree_btn">Disagree</string>
    <string name="title_activity_igaapregistration" translatable="false">IGAAPRegistration</string>
    
    <!-- IGAAP Registration Form -->
    <string name="student_lastname">Student\'s Last Name</string>
    <string name="student_firstname">Student\'s First Name</string>
    <string name="homeroom_teacher">Homeroom Teacher\'s Name</string>
    <string name="school1" translatable="false">School 1</string>
    <string name="school2" translatable="false">School 2</string>
    <string name="school3" translatable="false">School 3</string>
    <string name="school4" translatable="false">School 4</string>
    <string name="school_attending">School Attending</string>
    <string-array name="school_arrays">
        <item>@string/school1</item>
        <item>@string/school2</item>
        <item>@string/school3</item>
        <item>@string/school4</item>
    </string-array>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string-array name="age_array">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="classtime_pref">Class Time Preference</string>
    <string name="nativeamerican">American Indian/Alaskan Native</string>
    <string name="asian">Asian</string>
    <string name="white">White</string>
    <string name="black">Black/African American</string>
    <string name="hawaiian" translatable="false">Hawaiian/Pacific Islander</string>
    <string name="other">Other</string>
    <string name="ethnicity" translatable="false">Ethnicity</string>
    <string-array name="ethnicity_array">
        <item>@string/nativeamerican</item>
        <item>@string/asian</item>
        <item>@string/white</item>
        <item>@string/black</item>
        <item>@string/hawaiian</item>
        <item>@string/other</item>
    </string-array>
    <string name="homeaddress">Home Address</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="parents_lastname">Parent\'s Last Name</string>
    <string name="parents_firstname">Parent\'s First Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="date">Date</string>
    <string name="parents_signature">Parent\'s Signature</string>
    <string name="title_activity_ellregistration" translatable="false">ELLRegistration</string>
    <string name="title_activity_user_list_view" translatable="false">UserListView</string>

    <!-- ELL Registration -->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="pick_date">Pick your birth date</string>
    <string name="birth_month">Birth Month</string>
    <string name="birth_date">Birth Date</string>
    <string name="password_group">Group</string>
    <string name="curr_notes">Notes</string>
    <string name="jan" translatable="false">01</string>
    <string name="feb" translatable="false">02</string>
    <string name="mar" translatable="false">03</string>
    <string name="apr">04</string>
    <string name="may" translatable="false">05</string>
    <string name="june" translatable="false">06</string>
    <string name="july" translatable="false">07</string>
    <string name="aug">08</string>
    <string name="sep" translatable="false">09</string>
    <string name="oct" translatable="false">10</string>
    <string name="nov" translatable="false">11</string>
    <string name="dec" translatable="false">12</string>
    <string name="day13" translatable="false">13</string>
    <string name="day14" translatable="false">14</string>
    <string name="day15" translatable="false">15</string>
    <string name="day16" translatable="false">16</string>
    <string name="day17" translatable="false">17</string>
    <string name="day18" translatable="false">18</string>
    <string name="day19" translatable="false">19</string>
    <string name="day20" translatable="false">20</string>
    <string name="day21" translatable="false">21</string>
    <string name="day22" translatable="false">22</string>
    <string name="day23" translatable="false">23</string>
    <string name="day24" translatable="false">24</string>
    <string name="day25" translatable="false">25</string>
    <string name="day26" translatable="false">26</string>
    <string name="day27" translatable="false">27</string>
    <string name="day28" translatable="false">28</string>
    <string name="day29" translatable="false">29</string>
    <string name="day30" translatable="false">30</string>
    <string name="day31" translatable="false">31</string>

    <string-array name="birthmonth_array">
        <item>@string/jan</item>
        <item>@string/feb</item>
        <item>@string/mar</item>
        <item>@string/apr</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/aug</item>
        <item>@string/sep</item>
        <item>@string/oct</item>
        <item>@string/nov</item>
        <item>@string/dec</item>
    </string-array>
    <string-array name="birth_date">
        <item>@string/jan</item>
        <item>@string/feb</item>
        <item>@string/mar</item>
        <item>@string/apr</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/aug</item>
        <item>@string/sep</item>
        <item>@string/oct</item>
        <item>@string/nov</item>
        <item>@string/dec</item>
        <item>@string/day13</item>
        <item>@string/day14</item>
        <item>@string/day15</item>
        <item>@string/day16</item>
        <item>@string/day17</item>
        <item>@string/day18</item>
        <item>@string/day19</item>
        <item>@string/day20</item>
        <item>@string/day21</item>
        <item>@string/day22</item>
        <item>@string/day23</item>
        <item>@string/day24</item>
        <item>@string/day25</item>
        <item>@string/day26</item>
        <item>@string/day27</item>
        <item>@string/day28</item>
        <item>@string/day29</item>
        <item>@string/day30</item>
        <item>@string/day31</item>
    </string-array>
    <string name="group1" translatable="false">Group 1</string>
    <string name="group2" translatable="false">Group 2</string>
    <string name="group3" translatable="false">Group 3</string>
    <string name="group4" translatable="false">Group 4</string>
    <string-array name="password_groups">
        <item>@string/group1</item>
        <item>@string/group2</item>
        <item>@string/group3</item>
        <item>@string/group4</item>
    </string-array>

    <string name="currNotes1" translatable="false">Lang Level 1</string>
    <string name="currNotes2" translatable="false">Lang Level 2</string>
    <string name="currNotes3" translatable="false">Lang Level 1</string>
    <string name="currNotes4" translatable="false">Lang Level 1</string>

    <string-array name="currnotes_array">
        <item>@string/currNotes1</item>
        <item>@string/currNotes2</item>
        <item>@string/currNotes3</item>
        <item>@string/currNotes4</item>
    </string-array>
    <string name="county">County</string>
</resources>
